# counter-strike-2d

./: CMakeLists.txt  README.md  vcpkg.json
assets/tilemaps/: de_ancient.tmx  de_inferno.tmx  test.tmx
assets/tilemaps/tilesets/: grass.tsx  plant.tsx  plant_shadow.tsx  props.tsx  shadow.tsx  stone_ground.tsx  struct.tsx  wall.tsx
assets/tilesets/: grass.tsx  stone_ground.tsx  wall.tsx
cmake/: Findtmxlite.cmake
src/: common.h  main.cpp
src/ai/: PlayerAI.cpp  PlayerAI.hpp
src/behaviours/: MonoBehaviour.cpp  MonoBehaviour.hpp
src/cameras/: PlayerCamera.cpp  PlayerCamera.hpp
src/game/: Map.cpp  Map.hpp  Match.cpp  Match.hpp  Time.hpp  game.cpp  game.hpp
src/gameObjects/: Bullet.cpp  Bullet.hpp  Mouse.cpp  Mouse.hpp  Player.cpp  Player.hpp  Pointer.cpp  Pointer.hpp  Weapon.cpp  Weapon.hpp
src/game_objects/: Player.cpp  Player.hpp
src/geometry/: Vec2.cpp  Vec2.hpp
src/managers/: Audio.cpp  Audio.hpp  Font.cpp  Font.hpp  Mouse.cpp  Mouse.hpp  Scene.cpp  Scene.hpp  Time.hpp
src/scenes/: GameScene.cpp  GameScene.hpp
src/ui/: Alert.cpp  Alert.hpp  Announcer.cpp  Announcer.hpp  HUD.cpp  HUD.hpp  Killfeed.cpp  Killfeed.hpp  MiniScoreboard.cpp  MiniScoreboard.hpp  Scoreboard.cpp  Scoreboard.hpp  Text.cpp  Text.hpp
src/utilities/: Utils.cpp  Utils.hpp
